docs/results.md: q18 at 1000 partitions taken apart (#416), the warm-up finding, q67's write (#377)